fix description alignment for shorter embedly descriptions

--- a/app/assets/stylesheets/_embedly.css.sass
+++ b/app/assets/stylesheets/_embedly.css.sass
@@ -33,12 +33,14 @@
     padding: 0
     font-size: 1em
     max-width: 80%
+    width: 80%
     float: right
   @include respond-to(xsmall)
     a:not(.provider)
       font-size: 1em
     .description
       max-width: 100%
+      width: 100%
       float: none
       padding: 0
       font-size: 0.888888889em
